Menambahkan paragrap file index

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quia optio eos reprehenderit fugiat in maxime necessitatibus quos facilis quam. Iusto porro repudiandae nesciunt qui ipsum, labore exercitationem quas iste!</p>
 </body>
 </html>
